--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,14 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="default_margin">30dp</dimen>
+    <dimen name="margin_60">6dp</dimen>
+    <dimen name="name_font_Size">16sp</dimen>
+    <dimen name="margin_5">5dp</dimen>
+    <dimen name="margin_2">2dp</dimen>
+    <dimen name="h2_font_size">12sp</dimen>
+    <dimen name="margin_4">4dp</dimen>
+    <dimen name="image_height">200dp</dimen>
+    <dimen name="margin_15">15dp</dimen>
+    <dimen name="title_font_Size">18sp</dimen>
 </resources>
